--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
     "qrcode.react": "https://esm.sh/qrcode.react@^4.2.0"
   }
 }
@@ -50,5 +52,6 @@
 </head>
   <body class="bg-slate-900 text-white antialiased h-screen overflow-hidden">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
